--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,13 @@
     <title>Document</title>
   </head>
   <body>
+
+  <!-- GALLERY SECTION -->
+  <section class="movies container">
+    <ul class="movies__list"></ul>
+  <!-- END GALLERY SECTION -->
+
+
     <script src="./index.js"></script>
   </body>
 </html>
