--- a/src/my-library.html
+++ b/src/my-library.html
@@ -26,8 +26,8 @@
                     </li>
                 </ul>
                 <ul class="header-link">
-                    <li class="link-list list current"><a class="link link-text" href="index.html">HOME</a></li>
-                    <li class="link-list list"><a class="link link-text " href="./my-library.html">MY LIBRARY</a></li>
+                    <li class="link-list list"><a class="link link-text" href="index.html">HOME</a></li>
+                    <li class="link-list list current"><a class="link link-text " href="my-library.html">MY LIBRARY</a></li>
                 </ul>
             </ul>
             <form action="">
