--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,6 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,500&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="./css/style.css" />
     <title>Filmoteka</title>
   </head>
   <body>
@@ -30,7 +29,7 @@
               <a class="link link-text" href="index.html">HOME</a>
             </li>
             <li class="link-list list">
-              <a class="link link-text" href="./my-library.html">MY LIBRARY</a>
+              <a class="link link-text" href="">MY LIBRARY</a>
             </li>
           </ul>
         </ul>
