Додано кнопку "вверх"

--- a/src/index.html
+++ b/src/index.html
@@ -10,9 +10,11 @@
       href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;1,500&display=swap"
       rel="stylesheet"
     />
+    <script src="https://code.jquery.com/jquery-git.min.js"></script>
     <title>Filmoteka</title>
   </head>
   <body>
+    <div id="buttonOnTop"></div>
     <header class="header">
       <div class="container">
         <ul class="header-item">
