Отредактировала стили галлереи карточек
- подправила стили для галлереи
- отредактировала отображение количества жанров на карточке фильма (до 3ох)
- добавила тестовую функцию для трансформации заголовка и даты на карточках галлереи

--- a/src/index.html
+++ b/src/index.html
@@ -51,10 +51,13 @@
         </form>
       </div>
     </header>
+
+    <!-- Gallery Section -->
     <section class="movies container">
       <ul class="movies__list"></ul>
     </section>
-
+    <!-- END Gallery Section -->
+    
     <footer class="footer">
       <div class="container">
         <ul class="footer-item">
