--- a/src/index.html
+++ b/src/index.html
@@ -58,6 +58,7 @@
 
     <!-- Gallery Section -->
     <section class="movies container">
+      <div class="backdrop"></div>
       <ul class="movies__list"></ul>
     </section>
     <!-- END Gallery Section -->
