--- a/src/index.html
+++ b/src/index.html
@@ -57,9 +57,12 @@
     </header>
 
     <!-- Gallery Section -->
-    <section class="movies container">
-      <div class="backdrop"></div>
-      <ul class="movies__list"></ul>
+    <section class="section">
+      <div class="container">
+        <div class="backdrop"></div>
+        <ul class=" list movies__list"></ul>
+      </div>
+     
     </section>
     <!-- END Gallery Section -->
     
