коррекция стилей и открытия модалки

--- a/src/index.html
+++ b/src/index.html
@@ -61,7 +61,7 @@
     <!-- Gallery Section -->
     <section class="section">
       <div class="container">
-        <div class="backdrop"></div>
+        <!-- <div class="backdrop"></div> -->
         <ul class="list movies__list"></ul>
       </div>
     </section>
