--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,11 @@
     <title>Filmoteka</title>
   </head>
   <body>
-    <div id="buttonOnTop"></div>
+    <div>
+      <svg class="buttonOnTop">
+        <use href="./images/onTopIcon.svg#icon"></use>
+      </svg>
+    </div>
     <header class="header">
       <div class="container">
         <ul class="header-item">
