Infinite Scroll - нужно фиксить
-сняла ховер с ли-шки и поставина на картинку только
-добавила файл Intersection Observer

--- a/src/index.html
+++ b/src/index.html
@@ -67,6 +67,7 @@
       <div class="container">
         <!-- <div class="backdrop"></div> -->
         <ul class="list movies__list"></ul>
+        <div id="sentinel"></div>
       </div>
     </section>
     <!-- END Gallery Section -->
