--- a/src/index.html
+++ b/src/index.html
@@ -48,7 +48,7 @@
         <form action="">
           <ul class="search-item">
             <li class="searh-list list">
-              <input class="search-input" type="text" placeholder="Поиск фильмов" />
+              <input class="search-input" id="js-search-input" type="text" placeholder="Поиск фильмов" />
             </li>
             <li class="searh-list list">
               <button class="btn-search" type="submit">
