--- a/src/index.html
+++ b/src/index.html
@@ -20,6 +20,7 @@
     <title>Filmoteka</title>
   </head>
   <body>
+    <include src="./partials/loader.html"></include>
     <include src="./partials/btn-on-top.html"></include>
     <include src="./partials/header.html"></include>
     <main>
