--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
     <script src="https://code.jquery.com/jquery-git.min.js"></script>
     <title>Filmoteka</title>
   </head>
-  <body>
+  <body class="scroll-off">
     <include src="./partials/loader.html"></include>
     <include src="./partials/btn-on-top.html"></include>
     <include src="./partials/header.html"></include>
