--- a/src/index.html
+++ b/src/index.html
@@ -19,9 +19,9 @@
     <script src="https://code.jquery.com/jquery-git.min.js"></script>
     <title>Filmoteka</title>
   </head>
-  <body class="scroll-off">
-<!--   <body class="body"> -->
-    <include src="./partials/change-theme.html"></include> 
+  <!-- <body class="scroll-off"> -->
+  <body class="body">
+    <include src="./partials/change-theme.html"></include>
     <include src="./partials/loader.html"></include>
     <include src="./partials/btn-on-top.html"></include>
     <include src="./partials/header.html"></include>
