--- a/src/index.html
+++ b/src/index.html
@@ -28,6 +28,7 @@
       <div class="backdrop"></div>
     </main>
     <include src="./partials/footer.html"></include>
+    <include src="./partials/footer_modal_students.html"></include>
     <script src="./index.js"></script>
   </body>
 </html>
