--- a/src/index.html
+++ b/src/index.html
@@ -22,12 +22,13 @@
   <!-- <body class="scroll-off"> -->
   <body class="body">
     <include src="./partials/change-theme.html"></include>
-    <include src="./partials/loader.html"></include>
+    <!-- <include src="./partials/loader.html"></include> -->
     <include src="./partials/btn-on-top.html"></include>
     <include src="./partials/header.html"></include>
     <main>
       <include src="./partials/gallery.html"></include>
       <div class="backdrop"></div>
+      <button id="loadMore">Load more</button>
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/footer_modal_students.html"></include>
