скролл для модалки + стили для кнопки Load more
-добавила скролл для мобильной версии модалки
-убрала прокрутку тела страницы при открытой модалке
-добавила стили для кнопки Load more
-подняла модалку в планшетной версии выше

--- a/src/index.html
+++ b/src/index.html
@@ -28,7 +28,7 @@
     <main>
       <include src="./partials/gallery.html"></include>
       <div class="backdrop"></div>
-      <button id="loadMore">Load more</button>
+      <button id="loadMore" class = 'button__load-more'>Load more</button>
     </main>
     <include src="./partials/footer.html"></include>
     <include src="./partials/footer_modal_students.html"></include>
